--- a/TeamPJ/선택적모자이크.ipynb
+++ b/TeamPJ/선택적모자이크.ipynb
@@ -2,34 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 얼굴 분류기 \r\n",
     "### _ 무한도전 중 승리"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### GitHub 모델 이용 https://github.com/davisking/dlib-models "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
     "import warnings\r\n",
     "warnings.filterwarnings('ignore')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "import dlib, cv2\r\n",
     "import numpy as np\r\n",
@@ -41,13 +39,13 @@
     "detector = dlib.get_frontal_face_detector()\r\n",
     "sp = dlib.shape_predictor('models/shape_predictor_68_face_landmarks.dat')\r\n",
     "facerec = dlib.face_recognition_model_v1('models/dlib_face_recognition_resnet_model_v1.dat')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
     "def find_faces(img):\r\n",
     "    dets = detector(img, 1)\r\n",
@@ -78,18 +76,62 @@
     "        face_descriptors.append(np.array(face_descriptor))\r\n",
     "\r\n",
     "    return np.array(face_descriptors)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "img_paths = {\r\n",
+    "     '승리one': 'del_img/victory1.jpg',\r\n",
+    "     '승리two': 'del_img/victory2.jpg',\r\n",
+    "     '탑one': 'del_img/top1.jpg',\r\n",
+    "     '탑two': 'del_img/top2.jpg',\r\n",
+    "}\r\n",
+    "\r\n",
+    "descs = []\r\n",
+    "\r\n",
+    "for name, img_path in img_paths.items(): \r\n",
+    "    img = cv2.imread(img_path)\r\n",
+    "    _, img_shapes, _ = find_faces(img)\r\n",
+    "    descs.append([name, encode_faces(img, img_shapes)[0]])\r\n",
+    "    \r\n",
+    "np.save('user_img/descs.npy', descs)\r\n",
+    "print(descs)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[['승리one', array([-2.40262132e-02,  9.39716250e-02,  4.13361937e-02, -4.57958393e-02,\n",
+      "[['승리one', array([-0.0381131 ,  0.08300128,  0.09253457, -0.01210379, -0.14962366,\n",
+      "        0.01980155, -0.07829851, -0.12751494,  0.08285795, -0.0882291 ,\n",
+      "        0.21364689, -0.03760978, -0.24343711, -0.08217979, -0.02008344,\n",
+      "        0.15759182, -0.06818017, -0.17166685, -0.02785353,  0.04396042,\n",
+      "        0.00627613,  0.04253965,  0.02330241,  0.01015794, -0.12500459,\n",
+      "       -0.32279682, -0.12047321, -0.04606272, -0.0579806 , -0.01137765,\n",
+      "       -0.12615696,  0.08817726, -0.11912832, -0.055033  ,  0.10761653,\n",
+      "        0.05045249, -0.00787995, -0.05086611,  0.20377606,  0.03319374,\n",
+      "       -0.24796316,  0.06600293,  0.06288414,  0.24162143,  0.18914346,\n",
+      "        0.00801563,  0.01462361, -0.11972698,  0.13268651, -0.12123196,\n",
+      "        0.08635782,  0.15799494,  0.16268079,  0.04324132,  0.03756319,\n",
+      "       -0.10500199, -0.01351237,  0.16270569, -0.14736851, -0.00564651,\n",
+      "        0.02949947, -0.06988099, -0.00505538, -0.1364612 ,  0.1336733 ,\n",
+      "        0.06657701, -0.08345699, -0.21515308,  0.1116191 , -0.1210179 ,\n",
+      "       -0.14649695,  0.06281117, -0.20328996, -0.17294872, -0.32286936,\n",
+      "        0.02999349,  0.32217121,  0.16834328, -0.26127568,  0.02343155,\n",
+      "        0.03000604, -0.03044242,  0.0631018 ,  0.12512897, -0.01412813,\n",
+      "        0.02635363, -0.06171236, -0.0594338 ,  0.23425768, -0.06302822,\n",
+      "       -0.05628091,  0.21530384,  0.01572961,  0.08357245,  0.05762203,\n",
+      "        0.00053691, -0.026503  ,  0.00192955, -0.20229377, -0.04791182,\n",
+      "       -0.03265212, -0.02477635,  0.0076054 ,  0.13560815, -0.18535727,\n",
+      "        0.10299732, -0.00916884,  0.00836277, -0.03579289,  0.00206644,\n",
+      "       -0.09494101, -0.05089497,  0.13203758, -0.22892831,  0.14376037,\n",
+      "        0.14258754,  0.0808451 ,  0.07798428,  0.1345343 ,  0.02559861,\n",
+      "       -0.00071106, -0.02336703, -0.15345356, -0.08759558,  0.15861611,\n",
+      "       -0.01895302,  0.10561736,  0.03780517])], ['승리two', array([-2.40262132e-02,  9.39716250e-02,  4.13361937e-02, -4.57958393e-02,\n",
       "       -1.03981122e-01, -3.15149613e-02, -5.27299419e-02, -1.32668108e-01,\n",
       "        1.32559806e-01, -8.61146748e-02,  2.70637333e-01,  7.65107339e-03,\n",
       "       -2.36778975e-01, -6.70214444e-02, -8.10003504e-02,  1.85054198e-01,\n",
@@ -120,58 +162,65 @@
       "        1.06827512e-01, -1.90413639e-01,  2.05665305e-01,  1.26818836e-01,\n",
       "        1.11780003e-01,  4.13607657e-02,  1.18757851e-01,  4.59736399e-02,\n",
       "       -2.01587379e-02, -1.94119662e-03, -2.35812023e-01, -4.73832451e-02,\n",
-      "        9.89878774e-02,  9.32974741e-04,  1.37595147e-01, -1.47417523e-02])], ['승리two', array([-0.0381131 ,  0.08300128,  0.09253457, -0.01210379, -0.14962366,\n",
-      "        0.01980155, -0.07829851, -0.12751494,  0.08285795, -0.0882291 ,\n",
-      "        0.21364689, -0.03760978, -0.24343711, -0.08217979, -0.02008344,\n",
-      "        0.15759182, -0.06818017, -0.17166685, -0.02785353,  0.04396042,\n",
-      "        0.00627613,  0.04253965,  0.02330241,  0.01015794, -0.12500459,\n",
-      "       -0.32279682, -0.12047321, -0.04606272, -0.0579806 , -0.01137765,\n",
-      "       -0.12615696,  0.08817726, -0.11912832, -0.055033  ,  0.10761653,\n",
-      "        0.05045249, -0.00787995, -0.05086611,  0.20377606,  0.03319374,\n",
-      "       -0.24796316,  0.06600293,  0.06288414,  0.24162143,  0.18914346,\n",
-      "        0.00801563,  0.01462361, -0.11972698,  0.13268651, -0.12123196,\n",
-      "        0.08635782,  0.15799494,  0.16268079,  0.04324132,  0.03756319,\n",
-      "       -0.10500199, -0.01351237,  0.16270569, -0.14736851, -0.00564651,\n",
-      "        0.02949947, -0.06988099, -0.00505538, -0.1364612 ,  0.1336733 ,\n",
-      "        0.06657701, -0.08345699, -0.21515308,  0.1116191 , -0.1210179 ,\n",
-      "       -0.14649695,  0.06281117, -0.20328996, -0.17294872, -0.32286936,\n",
-      "        0.02999349,  0.32217121,  0.16834328, -0.26127568,  0.02343155,\n",
-      "        0.03000604, -0.03044242,  0.0631018 ,  0.12512897, -0.01412813,\n",
-      "        0.02635363, -0.06171236, -0.0594338 ,  0.23425768, -0.06302822,\n",
-      "       -0.05628091,  0.21530384,  0.01572961,  0.08357245,  0.05762203,\n",
-      "        0.00053691, -0.026503  ,  0.00192955, -0.20229377, -0.04791182,\n",
-      "       -0.03265212, -0.02477635,  0.0076054 ,  0.13560815, -0.18535727,\n",
-      "        0.10299732, -0.00916884,  0.00836277, -0.03579289,  0.00206644,\n",
-      "       -0.09494101, -0.05089497,  0.13203758, -0.22892831,  0.14376037,\n",
-      "        0.14258754,  0.0808451 ,  0.07798428,  0.1345343 ,  0.02559861,\n",
-      "       -0.00071106, -0.02336703, -0.15345356, -0.08759558,  0.15861611,\n",
-      "       -0.01895302,  0.10561736,  0.03780517])]]\n"
+      "        9.89878774e-02,  9.32974741e-04,  1.37595147e-01, -1.47417523e-02])], ['탑one', array([-0.09125673,  0.11199266,  0.03476147, -0.02630822, -0.07437246,\n",
+      "        0.01334308, -0.06286104, -0.1059871 ,  0.10815165, -0.14274538,\n",
+      "        0.1905876 , -0.07129356, -0.25697672, -0.01584226, -0.08715867,\n",
+      "        0.15276565, -0.16386451, -0.16560012,  0.01812375,  0.03499178,\n",
+      "        0.13410634,  0.04621713, -0.0403341 ,  0.03972284, -0.1372177 ,\n",
+      "       -0.2184218 , -0.07326752, -0.01519082, -0.01092859, -0.13535576,\n",
+      "       -0.07322799,  0.02553704, -0.21633999,  0.00779735,  0.01653532,\n",
+      "        0.15883188, -0.00606605, -0.03098753,  0.19258282,  0.02320851,\n",
+      "       -0.2563743 ,  0.03854237,  0.03727132,  0.28296715,  0.15710138,\n",
+      "        0.02936998, -0.06783222, -0.15516226,  0.0850117 , -0.17661397,\n",
+      "        0.08239061,  0.15925696,  0.14797191,  0.04203481, -0.06641956,\n",
+      "       -0.17424968,  0.0153433 ,  0.15866993, -0.12660517,  0.00354388,\n",
+      "        0.10828307, -0.12423366,  0.03636035, -0.04502269,  0.20828553,\n",
+      "        0.00940636, -0.10519437, -0.17019708,  0.13090289, -0.14415158,\n",
+      "       -0.09438112,  0.12087378, -0.09499385, -0.17886467, -0.28891402,\n",
+      "        0.02406972,  0.37325951,  0.0775086 , -0.19066894,  0.09045341,\n",
+      "       -0.02211696, -0.02134438,  0.14786373,  0.16718608, -0.0050599 ,\n",
+      "        0.03329514, -0.11400907,  0.01753849,  0.27578828, -0.05193565,\n",
+      "       -0.03174579,  0.14954001,  0.02265835,  0.03446188,  0.04974329,\n",
+      "       -0.01911325, -0.02459653,  0.01526711, -0.13617715, -0.03387987,\n",
+      "       -0.06167341, -0.065193  , -0.08154903,  0.17027116, -0.18478481,\n",
+      "        0.12102833,  0.03455677, -0.05103112,  0.00248983, -0.02838796,\n",
+      "       -0.09612732, -0.06611435,  0.13454705, -0.30252171,  0.16232994,\n",
+      "        0.15216404,  0.06564061,  0.11138874,  0.11731635,  0.11985339,\n",
+      "        0.02551861, -0.01565277, -0.2579568 , -0.02851366,  0.15358928,\n",
+      "       -0.04366133,  0.14286505, -0.00609962])], ['탑two', array([-0.07047848,  0.07686301,  0.01791078, -0.05043133, -0.09554438,\n",
+      "       -0.03006103, -0.01857812, -0.10963307,  0.14253065, -0.14546986,\n",
+      "        0.2723285 , -0.09605791, -0.29747024, -0.01420412, -0.03617577,\n",
+      "        0.15184335, -0.18975314, -0.17842628, -0.01532134,  0.03784196,\n",
+      "        0.12212551,  0.02918498,  0.01934064,  0.07145526, -0.13631597,\n",
+      "       -0.30797035, -0.10251774, -0.07140414,  0.01904734, -0.07606926,\n",
+      "       -0.06975691, -0.01691394, -0.18565927, -0.01081163,  0.06167364,\n",
+      "        0.03028155, -0.00657826, -0.07671546,  0.23554851,  0.00960452,\n",
+      "       -0.28272784,  0.07776565,  0.07184176,  0.24043064,  0.12189989,\n",
+      "        0.07904735, -0.03533263, -0.21157932,  0.10822984, -0.15092206,\n",
+      "        0.07098873,  0.17196174,  0.12251921,  0.01853075,  0.00676212,\n",
+      "       -0.16510281,  0.01964004,  0.15791021, -0.15143107,  0.03356743,\n",
+      "        0.10822126, -0.03418371,  0.05686596, -0.09767024,  0.22509655,\n",
+      "       -0.01303302, -0.13457476, -0.18702541,  0.07596096, -0.17408437,\n",
+      "       -0.12713198,  0.14061205, -0.12968597, -0.21199812, -0.26784995,\n",
+      "       -0.00910673,  0.36329132,  0.12020104, -0.21127428,  0.0739869 ,\n",
+      "       -0.0373629 , -0.02899851,  0.15624318,  0.16354454, -0.00477289,\n",
+      "        0.00145038, -0.1531211 , -0.05495004,  0.28957102, -0.06686978,\n",
+      "       -0.01957124,  0.23937796,  0.01395562,  0.07853214,  0.02254311,\n",
+      "       -0.01390012, -0.12354413, -0.00132607, -0.14004527, -0.06374178,\n",
+      "       -0.06097686,  0.01232919, -0.07581259,  0.12699479, -0.19283479,\n",
+      "        0.09114987, -0.01024004, -0.04557409, -0.02128677,  0.00836428,\n",
+      "       -0.0764329 , -0.08153041,  0.07421748, -0.30264741,  0.1741783 ,\n",
+      "        0.15479104,  0.13417619,  0.09119891,  0.11649009,  0.03416029,\n",
+      "       -0.00500414,  0.00364367, -0.25662437, -0.04000098,  0.14852431,\n",
+      "       -0.05375783,  0.15528029, -0.03915364])]]\n"
      ]
     }
    ],
-   "source": [
-    "img_paths = {\r\n",
-    "     #'진호': 'user_img/jinho.jpg',\r\n",
-    "     '승리one': 'del_img/victory2.jpg',\r\n",
-    "     '승리two': 'del_img/victory1.jpg',\r\n",
-    "}\r\n",
-    "\r\n",
-    "descs = []\r\n",
-    "\r\n",
-    "for name, img_path in img_paths.items(): \r\n",
-    "    img = cv2.imread(img_path)\r\n",
-    "    _, img_shapes, _ = find_faces(img)\r\n",
-    "    descs.append([name, encode_faces(img, img_shapes)[0]])\r\n",
-    "    \r\n",
-    "np.save('user_img/descs.npy', descs)\r\n",
-    "print(descs)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
     "cam = cv2.VideoCapture(\"Images/기피대상.mp4\") # 동영상\r\n",
     "cam.set(3, 640) # 너비\r\n",
@@ -212,7 +261,9 @@
     "        \r\n",
     "cam.release()\r\n",
     "cv2.destroyAllWindows()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
