Crawling_function_naver_cafe_contents

--- a/TeamRiiiiice/2015_naver_cafe_contents_crawling_func.ipynb
+++ b/TeamRiiiiice/2015_naver_cafe_contents_crawling_func.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 네이버 카페 contents 크롤링 \r\n",
-    "제목/ 닉네임/ 날짜 / 내용/ 댓글 데이터 가져오기"
+    "# 네이버 카페 contents 크롤링 _함수이용\r\n",
+    "제목/ 닉네임/ 날짜 / 내용/ 댓글 데이터 여러 페이지 한번에 가져오기"
    ],
    "metadata": {}
   },
@@ -180,7 +180,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 데이터 엑셀파일에 저장"
+    "## 2.데이터 엑셀파일에 저장"
    ],
    "metadata": {}
   },
