Crawling_func_Def_naver_cafe_contents

--- a/TeamRiiiiice/2015_naver_cafe_contents_crawling_func.ipynb
+++ b/TeamRiiiiice/2015_naver_cafe_contents_crawling_func.ipynb
@@ -32,16 +32,32 @@
     "1차 바이럴제거를 위해 검색 설정\r\n",
     "\r\n",
     ": 쌀 -업체, -제공받, -지원받, -원고료, -무상, -협찬, -소정의, -사료, -고래밥, -길냥이, -고양이, -강아지\r\n",
+    "\r\n",
     "https://search.naver.com/search.naver?sm=tab_hty.top&where=article&query=%EC%8C%80&oquery=Tkf&tqi=hdzB%2Fdp0YihssA3p2MGssssss3s-479049&nso=so%3Ar%2Cp%3Afrom20150101to20151231\r\n",
     "\r\n",
-    "## 01월\r\n",
-    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.01.01&date_to=2015.01.31&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150101to20150131&nso_open=1&t=0&mson=0&prdtype=0"
+    "### 01월\r\n",
+    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.01.01&date_to=2015.01.31&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150101to20150131&nso_open=1&t=0&mson=0&prdtype=0\r\n",
+    "\r\n",
+    "### 02월\r\n",
+    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.02.01&date_to=2015.02.28&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150201to20150228&nso_open=1&t=0&mson=0&prdtype=0\r\n",
+    "\r\n",
+    "### 03월\r\n",
+    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.03.01&date_to=2015.03.31&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150301to20150331&nso_open=1&t=0&mson=0&prdtype=0\r\n",
+    "\r\n",
+    "### 04월\r\n",
+    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.04.01&date_to=2015.04.30&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150401to20150430&nso_open=1&t=0&mson=0&prdtype=0\r\n",
+    "\r\n",
+    "### 05월\r\n",
+    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.05.01&date_to=2015.05.31&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150501to20150531&nso_open=1&t=0&mson=0&prdtype=0\r\n",
+    "\r\n",
+    "### 06월\r\n",
+    "https://search.naver.com/search.naver?where=article&query=%EC%8C%80%20-%EC%97%85%EC%B2%B4%2C%20-%EC%A0%9C%EA%B3%B5%EB%B0%9B%2C%20-%EC%A7%80%EC%9B%90%EB%B0%9B%2C%20-%EC%9B%90%EA%B3%A0%EB%A3%8C%2C%20-%EB%AC%B4%EC%83%81%2C%20-%ED%98%91%EC%B0%AC%2C%20-%EC%86%8C%EC%A0%95%EC%9D%98%2C%20-%EC%82%AC%EB%A3%8C%2C%20-%EA%B3%A0%EB%9E%98%EB%B0%A5%2C%20-%EA%B8%B8%EB%83%A5%EC%9D%B4%2C%20-%EA%B3%A0%EC%96%91%EC%9D%B4%2C%20-%EA%B0%95%EC%95%84%EC%A7%80&ie=utf8&st=rel&date_option=99&date_from=2015.06.01&date_to=2015.06.30&board=&srchby=text&dup_remove=1&cafe_url=&without_cafe_url=&sm=tab_opt&nso=so%3Ar%2Cp%3Afrom20150601to20150630&nso_open=1&t=0&mson=0&prdtype=0"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "source": [
     "#쌀\r\n",
     "driver = webdriver.Chrome('./chromedriver') \r\n",
@@ -54,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "source": [
     "# second 동안 스크롤다운 함수\r\n",
     "import datetime\r\n",
@@ -74,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "source": [
     "doScrollDown(100)"
    ],
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "source": [
     "def get_Data(driver):\r\n",
     "    driver.switch_to.frame('cafe_main') # 프레임 변경\r\n",
@@ -150,14 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "source": [
     "total_data=[] # 총데이터 저장할 리스트\r\n",
     "\r\n",
     "# 카페 개별 페이지 접속\r\n",
     "for article in article_list:\r\n",
     "    article.click()  # 한페이지에 접속완료\r\n",
-    "\r\n",
+    "    time.sleep(6)\r\n",
+    "    \r\n",
     "    # 드라이버 윈도우 설정\r\n",
     "    change_tab = driver.window_handles[-1]\r\n",
     "    driver.switch_to.window(change_tab) \r\n",
@@ -186,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "source": [
     "# title , nickname, date, content,comments 데이터프레임으로 저장\r\n",
     "df = pd.DataFrame(total_data,columns=['title','nickname','date','content','comments'])\r\n",
@@ -198,45 +215,45 @@
      "data": {
       "text/plain": [
        "                       title   nickname        date  \\\n",
-       "0                     공구쌀 후기        메이주  2015.01.27   \n",
-       "1              빨간쌀 필요하신분이요^^    악기하는 여자  2015.01.04   \n",
-       "2          쌀맛나는세상님 현미쌀 구입기^^        축복맘  2015.01.13   \n",
-       "3             쌀찐빵 더 맛있게 먹기^^        은혜맘  2015.01.12   \n",
-       "4               당근쌀머핀 구워보아요~       호호바다  2015.01.11   \n",
+       "0       일본 최고의 '쌀' 니가타 고시히카리        김수정  2015.01.20   \n",
+       "1                     공구쌀 후기        메이주  2015.01.27   \n",
+       "2              빨간쌀 필요하신분이요^^    악기하는 여자  2015.01.04   \n",
+       "3          쌀맛나는세상님 현미쌀 구입기^^        축복맘  2015.01.13   \n",
+       "4             쌀찐빵 더 맛있게 먹기^^        은혜맘  2015.01.12   \n",
        "..                       ...        ...         ...   \n",
-       "612                김밥 파뤼~~^^      붕이양75  2015.01.27   \n",
-       "613                     쌀떡볶이    꽃돌핀순수우유  2015.01.31   \n",
-       "614  민성이가 주말동안 별 차도가 없었어요 ㅠㅠ       민성이맘  2015.01.26   \n",
-       "615                  쌀과자-완료-  피아노치는 서산댁  2015.01.28   \n",
-       "616            지도 굴밥 맹글어 봤어요        가을비  2015.01.12   \n",
+       "972  민성이가 주말동안 별 차도가 없었어요 ㅠㅠ       민성이맘  2015.01.26   \n",
+       "973                  쌀과자-완료-  피아노치는 서산댁  2015.01.28   \n",
+       "974            지도 굴밥 맹글어 봤어요        가을비  2015.01.12   \n",
+       "975      소교 써보면 진짜 질질 쌀수밖에..        도라잉  2015.01.21   \n",
+       "976               중기 이유식할때요~       서이까꿍  2015.01.06   \n",
        "\n",
        "                                               content  \\\n",
-       "0    세종시로 올해 1월 10일 이사했습니다.어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구...   \n",
-       "1    저희 큰아버지께서 쌀도매를 하세요^^빨간쌀 이예요.저도 작녁부터 계속 먹고있는데요^...   \n",
-       "2    제가 변비가 심해서 현미쌀100%를 먹어야 되서 쌀맛나는세상님 현미쌀을 구매 했어요...   \n",
-       "3    그동안 계속 공구후기며 공구게시판에서 보던 쌀찐빵을 구입했어요 아기간식도 요즘 고민...   \n",
-       "4    심심한 일요일 오후.당근쌀머핀 만들어 보았어요~당근이랑 우유는 휘리릭 갈아주고밀가루...   \n",
+       "0    나라마다 주식(主食)이라 부르는 음식들이 있다. 우리나라와 같은 아시아 지역에서는 ...   \n",
+       "1    세종시로 올해 1월 10일 이사했습니다.어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구...   \n",
+       "2    저희 큰아버지께서 쌀도매를 하세요^^빨간쌀 이예요.저도 작녁부터 계속 먹고있는데요^...   \n",
+       "3    제가 변비가 심해서 현미쌀100%를 먹어야 되서 쌀맛나는세상님 현미쌀을 구매 했어요...   \n",
+       "4    그동안 계속 공구후기며 공구게시판에서 보던 쌀찐빵을 구입했어요 아기간식도 요즘 고민...   \n",
        "..                                                 ...   \n",
-       "612     낭군님의 요청으로 오늘 저녁은 김밥 ㅋ근데 많다 10줄...김밥 재료를 사면 ...   \n",
-       "613                                             먹던중한것    \n",
-       "614  주말 잘 보내셨나요~?^^민성이는 금욜부터 주말동안 먹은거는 쌀미음, 바나나, 찐단...   \n",
-       "615   8개월이후한봉당 2300원짜구요모두 2000원이요유통기한2015 05 16읍내현대~     \n",
-       "616      전캠서 저녁 식사 메뉴 힌트 얻어서지도 해봤구만요~~지발 우리집 세남자 맛있...   \n",
+       "972  주말 잘 보내셨나요~?^^민성이는 금욜부터 주말동안 먹은거는 쌀미음, 바나나, 찐단...   \n",
+       "973   8개월이후한봉당 2300원짜구요모두 2000원이요유통기한2015 05 16읍내현대~     \n",
+       "974      전캠서 저녁 식사 메뉴 힌트 얻어서지도 해봤구만요~~지발 우리집 세남자 맛있...   \n",
+       "975  제이브 광역으로 백룡,크리스 한번에 죽임->다음 우리스킬턴 소교버프헤제광역 100%...   \n",
+       "976  5개월에 이유식 시작해서 이제 몇일있으면 7개월 들어갑니다. 지금까지 쌀을 믹서기에...   \n",
        "\n",
        "                                              comments  \n",
-       "0    ㅎㅎ밥에 꿀발라~~~\\n꿀바른것같은데 꿀맛이 안나고 밥맛이나죠\\n꼬소름한 밥맛 ㅎㅎ...  \n",
-       "1    네^^일반쌀 검정쌀 처럼 섞어드시는거구요♡\\n구입 하시는분 많으심~~메타로 가져다 ...  \n",
-       "2    현미밥  어떻게하면   맛있나요?||밥솥이 중요한것 같아요~~ 밥솥 고장 나서 새로...  \n",
-       "3    ||후기이벤트 당첨소식이 늦었습니다~!\\n\\n^^ 귀한후기 감사드립니다\\n훈제기에 ...  \n",
-       "4    강력말고 일반 쌀가루 써도 돼요? \\n맛있어보여요 ~~^*^||원래 머핀은 박력쌀가...  \n",
+       "0    ㅁ...맛있겠다....||||야식타임 참고있는데 ㅜㅜ||보기만 해도 군침이..||밥...  \n",
+       "1    ㅎㅎ밥에 꿀발라~~~\\n꿀바른것같은데 꿀맛이 안나고 밥맛이나죠\\n꼬소름한 밥맛 ㅎㅎ...  \n",
+       "2    네^^일반쌀 검정쌀 처럼 섞어드시는거구요♡\\n구입 하시는분 많으심~~메타로 가져다 ...  \n",
+       "3    현미밥  어떻게하면   맛있나요?||밥솥이 중요한것 같아요~~ 밥솥 고장 나서 새로...  \n",
+       "4    ||후기이벤트 당첨소식이 늦었습니다~!\\n\\n^^ 귀한후기 감사드립니다\\n훈제기에 ...  \n",
        "..                                                 ...  \n",
-       "612  맛있겠어용.ㅋ나머지다넣은한줄은더맛날듯ㅋ||ㅋ 그건 제가 호로록했네요 ㅋㅋ||10줄싸...  \n",
-       "613  맛난거..||꺄아아아아\\n오늘 떡볶이 해먹어야겠당ㅋㅋ 군침이...||맛있어보여요 ㅎ...  \n",
-       "614  민성이가 힘든 주말을 보냈나봐요..\\n민성이가 지금 서있는 곳이 놀이방매트인가요?\\...  \n",
-       "615                                                 저용  \n",
-       "616  요즘 굴이 대세네요~~~||쌀보리뽕님께서 굴밥 하시는걸 보구서 \\n저도 급 맹글어 ...  \n",
+       "972  민성이가 힘든 주말을 보냈나봐요..\\n민성이가 지금 서있는 곳이 놀이방매트인가요?\\...  \n",
+       "973                                                 저용  \n",
+       "974  요즘 굴이 대세네요~~~||쌀보리뽕님께서 굴밥 하시는걸 보구서 \\n저도 급 맹글어 ...  \n",
+       "975                        바로 골로 보내버림||상대팀도 소교가 있다면...  \n",
+       "976  생쌀을 좀 오래 불리면 되나요? 초기보다 물을 더 많이 넣어서 해면 되나요? 어려워...  \n",
        "\n",
-       "[617 rows x 5 columns]"
+       "[977 rows x 5 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -267,6 +284,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>일본 최고의 '쌀' 니가타 고시히카리</td>\n",
+       "      <td>김수정</td>\n",
+       "      <td>2015.01.20</td>\n",
+       "      <td>나라마다 주식(主食)이라 부르는 음식들이 있다. 우리나라와 같은 아시아 지역에서는 ...</td>\n",
+       "      <td>ㅁ...맛있겠다....||||야식타임 참고있는데 ㅜㅜ||보기만 해도 군침이..||밥...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>공구쌀 후기</td>\n",
        "      <td>메이주</td>\n",
        "      <td>2015.01.27</td>\n",
@@ -274,7 +299,7 @@
        "      <td>ㅎㅎ밥에 꿀발라~~~\\n꿀바른것같은데 꿀맛이 안나고 밥맛이나죠\\n꼬소름한 밥맛 ㅎㅎ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>빨간쌀 필요하신분이요^^</td>\n",
        "      <td>악기하는 여자</td>\n",
        "      <td>2015.01.04</td>\n",
@@ -282,7 +307,7 @@
        "      <td>네^^일반쌀 검정쌀 처럼 섞어드시는거구요♡\\n구입 하시는분 많으심~~메타로 가져다 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>쌀맛나는세상님 현미쌀 구입기^^</td>\n",
        "      <td>축복맘</td>\n",
        "      <td>2015.01.13</td>\n",
@@ -290,20 +315,12 @@
        "      <td>현미밥  어떻게하면   맛있나요?||밥솥이 중요한것 같아요~~ 밥솥 고장 나서 새로...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>쌀찐빵 더 맛있게 먹기^^</td>\n",
        "      <td>은혜맘</td>\n",
        "      <td>2015.01.12</td>\n",
        "      <td>그동안 계속 공구후기며 공구게시판에서 보던 쌀찐빵을 구입했어요 아기간식도 요즘 고민...</td>\n",
        "      <td>||후기이벤트 당첨소식이 늦었습니다~!\\n\\n^^ 귀한후기 감사드립니다\\n훈제기에 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>당근쌀머핀 구워보아요~</td>\n",
-       "      <td>호호바다</td>\n",
-       "      <td>2015.01.11</td>\n",
-       "      <td>심심한 일요일 오후.당근쌀머핀 만들어 보았어요~당근이랑 우유는 휘리릭 갈아주고밀가루...</td>\n",
-       "      <td>강력말고 일반 쌀가루 써도 돼요? \\n맛있어보여요 ~~^*^||원래 머핀은 박력쌀가...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -314,23 +331,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>612</th>\n",
-       "      <td>김밥 파뤼~~^^</td>\n",
-       "      <td>붕이양75</td>\n",
-       "      <td>2015.01.27</td>\n",
-       "      <td>낭군님의 요청으로 오늘 저녁은 김밥 ㅋ근데 많다 10줄...김밥 재료를 사면 ...</td>\n",
-       "      <td>맛있겠어용.ㅋ나머지다넣은한줄은더맛날듯ㅋ||ㅋ 그건 제가 호로록했네요 ㅋㅋ||10줄싸...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>613</th>\n",
-       "      <td>쌀떡볶이</td>\n",
-       "      <td>꽃돌핀순수우유</td>\n",
-       "      <td>2015.01.31</td>\n",
-       "      <td>먹던중한것</td>\n",
-       "      <td>맛난거..||꺄아아아아\\n오늘 떡볶이 해먹어야겠당ㅋㅋ 군침이...||맛있어보여요 ㅎ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>614</th>\n",
+       "      <th>972</th>\n",
        "      <td>민성이가 주말동안 별 차도가 없었어요 ㅠㅠ</td>\n",
        "      <td>민성이맘</td>\n",
        "      <td>2015.01.26</td>\n",
@@ -338,7 +339,7 @@
        "      <td>민성이가 힘든 주말을 보냈나봐요..\\n민성이가 지금 서있는 곳이 놀이방매트인가요?\\...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>615</th>\n",
+       "      <th>973</th>\n",
        "      <td>쌀과자-완료-</td>\n",
        "      <td>피아노치는 서산댁</td>\n",
        "      <td>2015.01.28</td>\n",
@@ -346,31 +347,47 @@
        "      <td>저용</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>616</th>\n",
+       "      <th>974</th>\n",
        "      <td>지도 굴밥 맹글어 봤어요</td>\n",
        "      <td>가을비</td>\n",
        "      <td>2015.01.12</td>\n",
        "      <td>전캠서 저녁 식사 메뉴 힌트 얻어서지도 해봤구만요~~지발 우리집 세남자 맛있...</td>\n",
        "      <td>요즘 굴이 대세네요~~~||쌀보리뽕님께서 굴밥 하시는걸 보구서 \\n저도 급 맹글어 ...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>975</th>\n",
+       "      <td>소교 써보면 진짜 질질 쌀수밖에..</td>\n",
+       "      <td>도라잉</td>\n",
+       "      <td>2015.01.21</td>\n",
+       "      <td>제이브 광역으로 백룡,크리스 한번에 죽임-&gt;다음 우리스킬턴 소교버프헤제광역 100%...</td>\n",
+       "      <td>바로 골로 보내버림||상대팀도 소교가 있다면...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>976</th>\n",
+       "      <td>중기 이유식할때요~</td>\n",
+       "      <td>서이까꿍</td>\n",
+       "      <td>2015.01.06</td>\n",
+       "      <td>5개월에 이유식 시작해서 이제 몇일있으면 7개월 들어갑니다. 지금까지 쌀을 믹서기에...</td>\n",
+       "      <td>생쌀을 좀 오래 불리면 되나요? 초기보다 물을 더 많이 넣어서 해면 되나요? 어려워...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>617 rows × 5 columns</p>\n",
+       "<p>977 rows × 5 columns</p>\n",
        "</div>"
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "source": [
     "# 엑셀 파일로 저장\r\n",
-    "writer = pd.ExcelWriter('naver_cafe_ssal_contents_2015.xlsx')\r\n",
+    "writer = pd.ExcelWriter('naver_cafe_ssal_contents_2015_01.xlsx')\r\n",
     "df.to_excel(writer,index =False)\r\n",
     "writer.save()"
    ],
