바이럴제거_okt_빈도그래프

--- a/TeamRiiiiice/2015_cafe_preprocessing.ipynb
+++ b/TeamRiiiiice/2015_cafe_preprocessing.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### 데이터 전처리 (바이럴 제거 / NA 제거) -> 형태소 분석기 비교 -> okt() 빈도분석 그래프 "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# 1. 데이터 전처리"
    ],
    "metadata": {}
